updates docs, adding loyalty system and more

--- a/content/old_docs/index.mdx
+++ b/content/old_docs/index.mdx
@@ -55,10 +55,9 @@ Découvrez ci-dessous les fonctionnalités clés de **Swell**. Cliquez sur une f
 - Gestion du thème
 - Commentaires
 - Wishlist
-- Système de fidélité
 - Recherche avancée
 - Intégration Stripe
-- Interface d'administration
+- Interface d’administration
 
 ### Technologies utilisées
 
