--- a/content/old_docs/modules-management.mdx
+++ b/content/old_docs/modules-management.mdx
@@ -8,18 +8,7 @@ description: Activer, personnaliser ou retirer des fonctionnalités via la gesti
 **Swell** adopte une approche modulaire pour enrichir votre application : 
 chaque fonctionnalité additionnelle est proposée sous forme de module optionnel, prêt à être activé, personnalisé ou retiré selon vos besoins.
 
-Cette modularité vous permet d'adapter **Swell** à votre projet, sans surcharge inutile ni dépendance à des fonctionnalités dont vous n'avez pas l'usage.
-
-### Modules disponibles
-
-**Swell** propose actuellement les modules optionnels suivants :
-
-- **Wishlist** - Liste de souhaits pour les produits
-- **Review** - Système d'avis et d'évaluations produits
-- **Banner** - Messages d'information affichés sur le site
-- **Loyalty** - Système de points de fidélité et récompenses
-
-Chaque module peut être activé ou désactivé indépendamment selon vos besoins.
+Cette modularité vous permet d’adapter **Swell** à votre projet, sans surcharge inutile ni dépendance à des fonctionnalités dont vous n’avez pas l’usage.
 
 ### Activer un module
 
