update env language to bash in loyalty doc

--- a/content/docs/loyalty.mdx
+++ b/content/docs/loyalty.mdx
@@ -27,7 +27,7 @@ description: Système de points de fidélité dans Swell - fonctionnalité optio
 
 Dans votre fichier `.env`, configurez les paramètres suivants :
 
-```env
+```bash
 SWELL_LOYALTY_ENABLED=true
 SWELL_LOYALTY_POINTS_PER_EURO=10
 SWELL_LOYALTY_EXPIRATION_DAYS=365
@@ -46,7 +46,7 @@ SWELL_LOYALTY_MAX_DISCOUNT=50
 ### Activation du module
 
 1. **Activez le module** dans `.env` :
-   ```env
+   ```bash
    SWELL_LOYALTY_ENABLED=true
    ```
 
