--- a/content/docs/loyalty.en.mdx
+++ b/content/docs/loyalty.en.mdx
@@ -26,7 +26,7 @@ description: Loyalty points system in Swell - optional feature enabled via modul
 
 In your `.env` file, configure the following parameters:
 
-```env
+```bash
 SWELL_LOYALTY_ENABLED=true
 SWELL_LOYALTY_POINTS_PER_EURO=10
 SWELL_LOYALTY_EXPIRATION_DAYS=365
@@ -45,7 +45,7 @@ SWELL_LOYALTY_MAX_DISCOUNT=50
 ### Module Activation
 
 1. **Enable the module** in `.env`:
-   ```env
+   ```bash
    SWELL_LOYALTY_ENABLED=true
    ```
 
