updates language in code block from env to bash in installation doc

--- a/content/docs/installation.en.mdx
+++ b/content/docs/installation.en.mdx
@@ -39,7 +39,7 @@ These commands will:
 
 **Swell** offers several optional modules that you can enable according to your needs. Configure them in your `.env` file:
 
-```env
+```bash
 # Optional modules
 SWELL_WISHLIST_ENABLED=false
 SWELL_BANNER_ENABLED=false
