--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -39,7 +39,7 @@ Ces commandes vont :
 
 **Swell** propose plusieurs modules optionnels que vous pouvez activer selon vos besoins. Configurez-les dans votre fichier `.env` :
 
-```env
+```bash
 # Modules optionnels
 SWELL_WISHLIST_ENABLED=false
 SWELL_BANNER_ENABLED=false
