update stack version in index

--- a/content/docs/index.en.mdx
+++ b/content/docs/index.en.mdx
@@ -66,11 +66,11 @@ Here are the technologies used that power and drive **Swell**.
 
 - **Laravel 12**: Modern PHP framework for the backend.
 - **Inertia.js**: Allows building SPA applications with Laravel and React.
-- **React**: JavaScript library for building dynamic user interfaces.
-- **Tailwind CSS**: Utility CSS framework for modern and responsive design.
+- **React 19**: JavaScript library for building dynamic user interfaces.
+- **Tailwind CSS v4**: Utility CSS framework for modern and responsive design.
 - **Shadcn/ui**: Reusable and customizable UI components.
 - **Stripe**: Payment gateway integration for secure transactions.
-- **Pest**: Testing framework for PHP, used to ensure code quality.
+- **Pest v4**: Testing framework for PHP, used to ensure code quality.
 
 [Learn more about the technologies used](/technologies)
 
