--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -66,11 +66,11 @@ Voici les technologies utilisées qui propulsent et pilotent **Swell**.
 
 - **Laravel 12** : Framework PHP moderne pour le backend.
 - **Inertia.js** : Permet de construire des applications SPA avec Laravel et React.
-- **React** : Bibliothèque JavaScript pour construire des interfaces utilisateur dynamiques.
-- **Tailwind CSS** : Framework CSS utilitaire pour un design moderne et réactif.
+- **React 19** : Bibliothèque JavaScript pour construire des interfaces utilisateur dynamiques.
+- **Tailwind CSS v4** : Framework CSS utilitaire pour un design moderne et réactif.
 - **Shadcn/ui** : Composants UI réutilisables et personnalisables.
 - **Stripe** : Intégration de la passerelle de paiement pour les transactions sécurisées.
-- **Pest** : Framework de tests pour PHP, utilisé pour garantir la qualité du code.
+- **Pest v4** : Framework de tests pour PHP, utilisé pour garantir la qualité du code.
 
 [En savoir plus sur les technologies utilisées](/technologies)
 
