update installation prefix env var

--- a/content/docs/installation.en.mdx
+++ b/content/docs/installation.en.mdx
@@ -53,7 +53,7 @@ SWELL_LOYALTY_MIN_REDEEM=100
 SWELL_LOYALTY_MAX_DISCOUNT=50
 
 # Order configuration
-SWELL_ORDER_PREFIX=ORD
+SWELL_ORDER_PREFIX="ORD"
 ```
 
 For more information about modules, see the [Module management](/modules-management) page.
