--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -53,7 +53,7 @@ SWELL_LOYALTY_MIN_REDEEM=100
 SWELL_LOYALTY_MAX_DISCOUNT=50
 
 # Configuration des commandes
-SWELL_ORDER_PREFIX=ORD
+SWELL_ORDER_PREFIX="ORD"
 ```
 
 Pour plus d'informations sur les modules, consultez la page [Gestion des modules](/modules-management).
