fix stripe url in local dev file

--- a/content/docs/local-development.en.mdx
+++ b/content/docs/local-development.en.mdx
@@ -16,7 +16,7 @@ This command groups the following commands:
 - `php artisan serve`: Starts the Laravel development server.
 - `php artisan queue:listen`: Starts the queue manager for background tasks.
 - `npm run dev`: Compiles front-end assets with Vite.
-- `stripe listen --forward-to http://localhost:8000/api/stripe/webhook`: Listens for Stripe events and redirects them to the Swell API.
+- `stripe listen --forward-to http://localhost:8000/stripe/webhook`: Listens for Stripe events and redirects them to the Swell API.
 
 To customize the command, you can modify the `dev` script in the `composer.json` file:
 
