--- a/content/docs/local-development.mdx
+++ b/content/docs/local-development.mdx
@@ -16,7 +16,7 @@ Cette commande regroupe les commandes suivantes :
 - `php artisan serve` : Démarre le serveur de développement Laravel.
 - `php artisan queue:listen` : Démarre le gestionnaire de file d'attente pour les tâches en arrière-plan.
 - `npm run dev` : Compile les assets front-end avec Vite.
-- `stripe listen --forward-to http://localhost:8000/api/stripe/webhook` : Écoute les événements Stripe et les redirige vers l'API de Swell.
+- `stripe listen --forward-to http://localhost:8000/stripe/webhook` : Écoute les événements Stripe et les redirige vers l'API de Swell.
 
 Pour personnaliser la commande, vous pouvez modifier le script `dev` dans le fichier `composer.json` :
 
