--- a/content/docs/technologies.en.mdx
+++ b/content/docs/technologies.en.mdx
@@ -27,12 +27,12 @@ your routes directly return React pages, without the complexity of a REST API to
 
 ### React
 
-**React** is the JavaScript library that powers **Swell**'s user interface. 
+**React 19** is the JavaScript library that powers **Swell**'s user interface. 
 It allows you to create dynamic, reactive and modular interfaces, while favoring component reuse and code maintainability.
 
 ### Tailwind CSS
 
-**Tailwind CSS** offers a utility class system to quickly style your interfaces. 
+**Tailwind CSS v4** offers a utility class system to quickly style your interfaces. 
 It allows you to design modern, responsive and consistent designs, while keeping total control over the appearance of each component.
 
 ### shadcn/ui
@@ -47,7 +47,7 @@ It allows you to manage transactions securely, with simple integration and advan
 
 ### Pest
 
-**Pest** is the PHP testing framework used in **Swell**. 
+**Pest v4** is the PHP testing framework used in **Swell**. 
 It offers an expressive and modern syntax for writing unit and functional tests, guaranteeing code stability and quality throughout project evolution.
 
 <Callout>
