--- a/content/docs/technologies.mdx
+++ b/content/docs/technologies.mdx
@@ -27,12 +27,12 @@ vos routes renvoient directement des pages React, sans la complexité d’une AP
 
 ### React
 
-**React** est la bibliothèque JavaScript qui propulse l’interface utilisateur de **Swell**. 
+**React 19** est la bibliothèque JavaScript qui propulse l’interface utilisateur de **Swell**. 
 Elle permet de créer des interfaces dynamiques, réactives et modulaires, tout en favorisant la réutilisation des composants et la maintenabilité du code.
 
 ### Tailwind CSS
 
-**Tailwind CSS** offre un système de classes utilitaires pour styliser rapidement vos interfaces. 
+**Tailwind CSS v4** offre un système de classes utilitaires pour styliser rapidement vos interfaces. 
 Il permet de concevoir des designs modernes, responsives et cohérents, tout en gardant le contrôle total sur l’apparence de chaque composant.
 
 ### shadcn/ui
@@ -47,7 +47,7 @@ Elle permet de gérer les transactions de manière sécurisée, avec une intégr
 
 ### Pest
 
-**Pest** est le framework de tests PHP utilisé dans **Swell**. 
+**Pest v4** est le framework de tests PHP utilisé dans **Swell**. 
 Il propose une syntaxe expressive et moderne pour écrire des tests unitaires et fonctionnels, garantissant la stabilité et la qualité du code au fil des évolutions du projet.
 
 <Callout>
